# ner-inteview-project

./: .gitignore  README.md  development.md  main.py  pyproject.toml  reports.md  requirements.txt
src/: data_handler.py  evaluator.py  model_factory.py  predictor.py  trainer.py  utils.py  visualizer.py
