[tool.poetry]
name = "ner-bert-project"
version = "0.1.0"
description = "NER system using DistilBERT with a focus on SOLID/OOP principles"
authors = ["Your Name <youremail@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
torch = "2.2.2"
transformers = "4.47.1"
accelerate = "^1.2.1"
datasets = "^2.18.0"
numpy = "1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.0"
seqeval = "^1.2.2"
evaluate = "^0.4.1"
tqdm = "^4.66.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.9.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"